--- a/map/index.html
+++ b/map/index.html
@@ -8,7 +8,9 @@
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="石造物3DアーカイブMap" />
     <meta property="og:description" content="路傍や寺社にある庚申塔や道祖神などの石造物を3Dモデル化してアーカイブするプロジェクトのマップです。" />
+    <meta property="og:image" content="https://stonework-3D-archive.github.io/map/ogimage.png" />
     <meta name="description" content="路傍や寺社にある庚申塔や道祖神などの石造物を3Dモデル化してアーカイブするプロジェクトのマップです。" />
+    <meta name="twitter:card" content="summary" />
     <title>石造物3DアーカイブMap</title>
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
     <link rel="stylesheet" href="css/font-awesome.min.css" type="text/css" />
