--- a/map/index.html
+++ b/map/index.html
@@ -37,7 +37,7 @@
             <h4 class="modal-title">このマップについて</h4>
           </div>
           <div class="modal-body">
-            <p>路傍や寺社にある庚申塔や道祖神などの石造物を3Dモデル化してアーカイブする、<a href="https://stonework-3d-archive.github.io/">石造物3Dプロジェクト</a>の成果物を示したマップです。
+            <p>路傍や寺社にある庚申塔や道祖神などの石造物を3Dモデル化してアーカイブする、<a href="https://stonework-3d-archive.github.io/">石造物3Dアーカイブ</a>プロジェクトの成果物を示したマップです。
             </p>
             <p>当サイトは以下のオープンソースソフトウェアを利用しています。
               <ul>
