--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
   <h1>石造物3Dアーカイブ</h1>
-  <p>
+  <p style="text-indent:1em">
   路傍や寺社にある庚申塔や道祖神などの石造物を3Dモデル化してアーカイブするプロジェクトです。
   </p>
   <h3>マップ</h3>
@@ -46,6 +46,11 @@
     <li>代表者 <a href="https://twitter.com/T515v761" target="_blank">篠田 浩輔</a>（國學院大學）</li>
     <li><a href="https://twitter.com/tk01k" target="_blank">小池 隆</a>（<a href="https://midoriit.com" target="_blank">合同会社 緑ＩＴ事務所</a>）</li>
   </ul>
+  <hr width="50%"/>
+  <h3>お問合せ先</h3>
+  <p style="text-indent:1em">
+    <img src="sekizobutsu3d.png" />
+  </p>
   <hr width="50%"/>
   <p xmlns:dct="http://purl.org/dc/terms/" xmlns:vcard="http://www.w3.org/2001/vcard-rdf/3.0#">
     <a rel="license" href="http://creativecommons.org/publicdomain/zero/1.0/">
