--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta property="og:description" content="路傍や寺社にある庚申塔や道祖神などの石造物を3Dモデル化してアーカイブするプロジェクトです。" />
   <meta property="og:image" content="https://stonework-3D-archive.github.io/ogimage.png" />
   <meta name="description" content="路傍や寺社にある庚申塔や道祖神などの石造物を3Dモデル化してアーカイブするプロジェクトです。" />
-  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:card" content="summary_large_image" />
   <link rel="stylesheet" href="main.css" type="text/css" />
   <title>石造物3Dアーカイブ</title>
 </head>
