--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
   <meta name="description" content="路傍や寺社にある庚申塔や道祖神などの石造物を3Dモデル化してアーカイブするプロジェクトです。" />
   <meta name="twitter:card" content="summary_large_image" />
   <link rel="stylesheet" href="main.css" type="text/css" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/icon-32x32.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="/icon-192x192.png">
+  <link rel="apple-touch-icon-precomposed" href="/apple-touch-icon-precomposed.png" />
   <title>石造物3Dアーカイブ</title>
 </head>
 <body>
