--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <meta property="og:title" content="石造物3Dアーカイブ" />
   <meta property="og:type" content="website" />
   <meta property="og:site_name" content="石造物3Dアーカイブ" />
-  <meta property="og:description" content="路傍や寺社にある庚申塔や道祖神などの石造物を3Dモデル化してアーカイブするプロジェクトです。" />
+  <meta property="og:description" content="路傍や寺社にある庚申塔や道祖神などの石造物をフォトグラメトリ（SfM/MVS）で3Dモデル化してアーカイブするプロジェクトです。" />
   <meta property="og:image" content="https://stonework-3D-archive.github.io/ogimage.png" />
-  <meta name="description" content="路傍や寺社にある庚申塔や道祖神などの石造物を3Dモデル化してアーカイブするプロジェクトです。" />
+  <meta name="description" content="路傍や寺社にある庚申塔や道祖神などの石造物をフォトグラメトリ（SfM/MVS）で3Dモデル化してアーカイブするプロジェクトです。" />
   <meta name="twitter:card" content="summary_large_image" />
   <link rel="stylesheet" href="main.css" type="text/css" />
   <link rel="icon" type="image/png" sizes="32x32" href="/icon-32x32.png">
@@ -21,7 +21,7 @@
 <body>
   <h1>石造物3Dアーカイブ</h1>
   <p>
-  路傍や寺社にある庚申塔や道祖神などの石造物を3Dモデル化してアーカイブするプロジェクトです。
+  路傍や寺社にある庚申塔や道祖神などの石造物をフォトグラメトリ（SfM/MVS）で3Dモデル化してアーカイブするプロジェクトです。
   </p>
   <h3>マップ</h3>
   <div class="frame_wrapper">
