--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   <h3>プロジェクトメンバー</h3>
   <ul>
     <li>代表者 <a href="https://twitter.com/T515v761" target="_blank">篠田 浩輔</a>（國學院大學）</li>
-    <li><a href="https://twitter.com/tk01k" target="_blank">小池 隆</a>（<a href="https://midoriit.com" target="_blank">合同会社 緑ＩＴ事務所</a>）</li>
+    <li><a href="https://twitter.com/MidoriIToffice" target="_blank">小池 隆</a>（<a href="https://midoriit.com" target="_blank">合同会社 緑ＩＴ事務所</a>）</li>
   </ul>
   <hr width="50%"/>
   <h3>お問合せ先</h3>
