--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
     <li><a href="https://twitter.com/MidoriIToffice" target="_blank">小池 隆</a>（<a href="https://midoriit.com" target="_blank">合同会社 緑ＩＴ事務所</a>）</li>
   </ul>
   <hr width="50%"/>
+  <h3>コントリビュータ</h3>
+  <p>石造物の3Dモデル作成とWikimedia Commonsでの公開にご協力頂けるコントリビュータを募集しています。<br/>
+  上記のプロジェクトメンバーまたは下記のお問合せ先までご連絡下さい。</p>
+  <hr width="50%"/>
   <h3>お問合せ先</h3>
   <p>
     <img src="sekizobutsu3d.png" />
