マーカーアイコンを種類別に

--- a/map/index.html
+++ b/map/index.html
@@ -18,12 +18,14 @@
     <link rel="stylesheet" href="leaflet/MarkerCluster.css" type="text/css">
     <link rel="stylesheet" href="leaflet/MarkerCluster.Default.css" type="text/css" />
     <link rel="stylesheet" href="leaflet/easy-button.css" type="text/css" />
+    <link rel="stylesheet" href="leaflet/leaflet-beautify-marker-icon.css" type="text/css" />
     <link rel="stylesheet" href="css/map.css" type="text/css">
     <script type="text/javascript" src="js/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
     <script type="text/javascript" src="leaflet/leaflet.js"></script>
     <script type="text/javascript" src="leaflet/leaflet.markercluster-src.js"></script>
     <script type="text/javascript" src="leaflet/easy-button.js"></script>
+    <script type="text/javascript" src="leaflet/leaflet-beautify-marker-icon.js"></script>
     <script type="text/javascript" src="js/map.js"></script>
   </head>
   <body>
@@ -44,6 +46,7 @@
                 <li><a href="http://leafletjs.com/" target="_blank">Leaflet</a> (2-Clause BSD)
                 <li><a href="https://github.com/Leaflet/Leaflet.markercluster" target="_blank">Leaflet.markercluster</a> (MIT license)
                 <li><a href="https://github.com/CliffCloud/Leaflet.EasyButton" target="_blank">Leaflet.EasyButton</a> (MIT license)
+                <li><a href="https://github.com/marslan390/BeautifyMarker" target="_blank">Leaflet.BeautifyMarker</a> (MIT license)
                 <li><a href="http://getbootstrap.com/" target="_blank">Bootstrap</a> (MIT license)
                 <li><a href="http://jquery.com/" target="_blank">jQuery</a> (MIT license)
                 <li><a href="https://fortawesome.github.io/Font-Awesome/" target="_blank">Font Awesome</a> (SIL OFL 1.1)
