--- a/index.html
+++ b/index.html
@@ -37,6 +37,12 @@
   <li><a href="https://github.com/ShinodaKosuke/stonework-3D-archive/blob/master/stonework-3D-archive.geojson" target="_blank">GeoJSONファイル</a></li>
   </ul>
   <hr width="50%"/>
+  <h3>お知らせ</h3>
+  <ul>
+    <li>2月1日(土)に佐賀大学で開催される<a href="http://www.jinmoncom.jp/index.php?CH122" target="_blank">第122回 人文科学とコンピュータ研究発表会</a>において、「石造物3Dアーカイブプロジェクト ―その手法と可能性―」と題してプロジェクト代表者の篠田浩輔が発表します。
+    <li>2019.11.8 <a href="https://2019.lodc.jp/archives/2019/pressRelease2019.html" target="_blank">Linked Open Data チャレンジ Japan 2019</a>において、プロジェクトメンバーの作品「<a href="http://idea.linkdata.org/idea/idea1s2858i" target="_blank">3D石造物データ</a>」がオープンサイエンス賞を受賞しました。
+  </ul>
+  <hr width="50%"/>
   <h3>関連情報</h3>
   <ul>
     <li>2019.12.7 <a href="https://www.slideshare.net/tk01k/3d-202523936" target="_blank">LODチャレンジ2019 「オープンサイエンス賞 受賞作品 3D石造物データ」</a> - SlideShare
