--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
   <h1>石造物3Dアーカイブ</h1>
   <p>
-  路傍や寺社にある庚申塔や道祖神などの石仏・石造物をフォトグラメトリ（SfM/MVS）で3Dモデル化してアーカイブするプロジェクトです。
+  路傍や寺社にある庚申塔や道祖神などの石仏・石造物をフォトグラメトリ（SfM/MVS）で3Dモデル化し、オープンデータとしてアーカイブするプロジェクトです。
   </p>
   <h3>マップ</h3>
   <div class="frame_wrapper">
