--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
   <hr width="50%"/>
   <h3>オープンデータ</h3>
   <ul>
-  <li><a href="https://github.com/ShinodaKosuke/stonework-3D-archive/blob/master/stonework-3D-archive.csv" target="_blank">CSVファイル</a></li>
-  <li><a href="https://github.com/ShinodaKosuke/stonework-3D-archive/blob/master/stonework-3D-archive.geojson" target="_blank">GeoJSONファイル</a></li>
+  <li><a href="https://github.com/ShinodaKosuke/stonework-3D-archive/blob/master/stonework-3D-archive.csv" target="_blank">CSVファイル</a> - GitHub</li>
+  <li><a href="https://github.com/ShinodaKosuke/stonework-3D-archive/blob/master/stonework-3D-archive.geojson" target="_blank">GeoJSONファイル</a> - GitHub</li>
   </ul>
   <hr width="50%"/>
   <h3>お知らせ</h3>
