お知らせ追加
「Photogrammetry Meetup vol.2 at TIMEMACHINE」について追加

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
   <hr width="50%"/>
   <h3>お知らせ</h3>
   <ul>
+    <li>2020.3.7(土) Psychic VR Lab:TIMEMACHINEで開催される<a href="https://connpass.com/event/165178/" target="_blank">Photogrammetry Meetup vol.2 at TIMEMACHINE</a>において、「石造物3Dアーカイブプロジェクト」と題してプロジェクトメンバーの篠田浩輔が発表します。
     <li>3月1日(日)に東京都埋蔵文化財センターで開催される<a href="https://adss07.peatix.com/" target="_blank">考古学・文化財のためのデータサイエンス・サロン #7</a>において、「Wikimedia Commonsを用いた石造物3Dデータの公開と共有」と題してプロジェクトメンバーの小池隆が発表します。
     <li>2020.2.1 佐賀大学で開催された<a href="http://www.jinmoncom.jp/index.php?CH122" target="_blank">第122回 人文科学とコンピュータ研究発表会</a>において、「石造物3Dアーカイブプロジェクト ―その手法と可能性―」と題してプロジェクト代表者の篠田浩輔が発表しました。プレゼン資料は<a href="https://www.slideshare.net/kosukeShinoda1/3d-226757292" target="_blank">こちら</a>。
     <li>2019.11.8 <a href="https://2019.lodc.jp/" target="_blank">Linked Open Data チャレンジ Japan 2019</a>において、プロジェクトメンバーの小池隆の作品「<a href="http://idea.linkdata.org/idea/idea1s2858i" target="_blank">3D石造物データ</a>」が<a href="https://2019.lodc.jp/archives/2019/pressRelease2019.html" target="_blank">オープンサイエンス賞を受賞</a>しました。プレゼン資料は<a href="https://www.slideshare.net/tk01k/3d-202523936" target="_blank">こちら</a>。
