お知らせ更新

--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
   <h3>お知らせ</h3>
   <ul>
     <li>2020.5.9(木)に<a href="http://sekibutukyokai.jp/" target="_blank">日本石仏協会</a>で開催される石仏談話室において、「石造物3Dアーカイブ―記録と公開のお勧め」と題してプロジェクトメンバーの篠田浩輔が発表します。参加申込み不要ですが、参加費<font color="red">1,000円</font>（<font color="red">学生500円</font>）が必要です。
+    <li>2020.3.14（土）に東京大学駒場リサーチキャンパスAn棟2階コンベンションホールで開催される<a href="https://urbandata-challenge.jp/news/2019-3rd-symposium" target="_blank">アーバンデータチャレンジ2019 with IDC2019ファイナル</a>において、「石造物3Dアーカイブ」と題してプロジェクトメンバーの篠田浩輔が発表します。オンライン参加も可能です。人数把握のため<a href="https://udc2019-final.peatix.com/?lang=ja" target"_blank">peatix</a>から参加申込みをお願いします。
+    <li>2020.3.13（金）に開催される<a href="https://urbandata-challenge.jp/news/2019-3rd-symposium" target="_blank">アーバンデータチャレンジ2019 with IDC2019デモデー</a>において、「石造物3Dアーカイブ」と題してプロジェクトメンバーの篠田浩輔が発表します。<font color="red">オンライン開催のみ</font>となりますので、<a href="http://bit.ly/UDC_channel" target"_blank">Youtube Live</a>でご参加ください。
     <li><s>2020.3.7(土)</s><font color="red">2020.4.11(土)</font>にPsychic VR Lab:TIMEMACHINEで開催される<a href="https://connpass.com/event/165178/" target="_blank">Photogrammetry Meetup vol.2 at TIMEMACHINE</a>において、「石造物3Dアーカイブプロジェクト」と題してプロジェクトメンバーの篠田浩輔が発表します。参加<font color="red">要申込み</font>です。
     <!-- <li>3月1日(日)に東京都埋蔵文化財センターで開催される<a href="https://adss07.peatix.com/" target="_blank">考古学・文化財のためのデータサイエンス・サロン #7</a>において、「Wikimedia Commonsを用いた石造物3Dデータの公開と共有」と題してプロジェクトメンバーの小池隆が発表します。-->
     <li>2020.2.1 佐賀大学で開催された<a href="http://www.jinmoncom.jp/index.php?CH122" target="_blank">第122回 人文科学とコンピュータ研究発表会</a>において、「石造物3Dアーカイブプロジェクト ―その手法と可能性―」と題してプロジェクト代表者の篠田浩輔が発表しました。プレゼン資料は<a href="https://www.slideshare.net/kosukeShinoda1/3d-226757292" target="_blank">こちら</a>。
