--- a/index.html
+++ b/index.html
@@ -48,6 +48,11 @@
     <li>2019.11.8 <a href="https://2019.lodc.jp/" target="_blank">Linked Open Data チャレンジ Japan 2019</a>において、プロジェクトメンバーの小池隆の作品「<a href="http://idea.linkdata.org/idea/idea1s2858i" target="_blank">3D石造物データ</a>」が<a href="https://2019.lodc.jp/archives/2019/pressRelease2019.html" target="_blank">オープンサイエンス賞を受賞</a>しました。プレゼン資料は<a href="https://www.slideshare.net/tk01k/3d-202523936" target="_blank">こちら</a>。
   </ul>
   <hr width="50%"/>
+  <h3>メディア掲載</h3>
+  <ul>
+    <li>2020.3.18 <a href="https://geo-news.jp/archives/1287" target="_blank">「オープンデータ活用で地域課題解決に取り組む「アーバンデータチャレンジ2019」ファイナルステージ開催」</a> - GeoNews
+  </ul>
+  <hr width="50%"/>
   <h3>関連情報</h3>
   <ul>
     <li>2020.3.14 アーバンデータチャレンジ2019 with IDC2019ファイナル<a href="https://youtu.be/kYeAbO96lII?t=2320" target="_blank">「石造物3Dアーカイブ」</a> - YouTube
