--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
     <li>2020.3.14 アーバンデータチャレンジ2019 with IDC2019ファイナル<a href="https://youtu.be/kYeAbO96lII?t=2320" target="_blank">「石造物3Dアーカイブ」</a> - YouTube
     <li>2020.3.14 <a href="https://youtu.be/XfWJnDmCdJY" target="_blank">「石造物3Dアーカイブ」の使い方（字幕あり）」</a> - YouTube
     <li>2020.3.14 アーバンデータチャレンジ2019 with IDC2019ファイナル<a href="https://www.slideshare.net/kosukeShinoda1/3d-230271758" target="_blank">「石造物3Dアーカイブ」</a> - SlideShare
+    <li>2020.3.13 アーバンデータチャレンジ2019 with IDC2019デモデー<a href="https://youtu.be/QFYrWyV3Jf4?t=1635" target="_blank">「石造物3Dアーカイブ」<a/> - YouTube
     <li>2020.2.1 第122回人文科学とコンピュータ研究会 <a href="https://www.slideshare.net/kosukeShinoda1/3d-226757292" target="_blank">「石造物3Dアーカイブプロジェクト―その手法と可能性―」</a> - SlideShare
 　　<li>2020.1.25 情報処理学会研究報告<a href="http://id.nii.ac.jp/1001/00202856/" target="_blank">「石造物3Dアーカイブプロジェクト―その手法と可能性―」</a>（有料） - 情報学広場
     <li>2019.12.7 LODチャレンジ2019 <a href="https://www.slideshare.net/tk01k/3d-202523936" target="_blank">「オープンサイエンス賞 受賞作品 3D石造物データ」</a> - SlideShare
