Psychic VR Lab:TIMEMACHINEの日付更新

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <h3>お知らせ</h3>
   <ul>
     <li>2020.5.9(木)に<a href="http://sekibutukyokai.jp/" target="_blank">日本石仏協会</a>で開催される石仏談話室において、「石造物3Dアーカイブ―記録と公開のお勧め」と題してプロジェクトメンバーの篠田浩輔が発表します。参加申込み不要ですが、参加費1,000円（学生500円）が必要です。
-    <!-- <li>2020.4.11(土)にPsychic VR Lab:TIMEMACHINEで開催される<a href="https://connpass.com/event/165178/" target="_blank">Photogrammetry Meetup vol.2 at TIMEMACHINE</a>において、「石造物3Dアーカイブプロジェクト」と題してプロジェクトメンバーの篠田浩輔が発表します。参加要申込みです。 -->
+    <!-- <li>2020..()にPsychic VR Lab:TIMEMACHINEで開催される<a href="https://connpass.com/event/165178/" target="_blank">Photogrammetry Meetup vol.2 at TIMEMACHINE</a>において、「石造物3Dアーカイブプロジェクト」と題してプロジェクトメンバーの篠田浩輔が発表します。参加要申込みです。 -->
     <li>2020.3.14（土）<a href="https://urbandata-challenge.jp/news/2019-3rd-symposium" target="_blank">アーバンデータチャレンジ2019 with IDC2019ファイナル</a>において、「石造物3Dアーカイブ」が<b><font color="red">金賞</font></b>を受賞しました。発表の様子は<a href="https://youtu.be/kYeAbO96lII?t=2320" target="_blank">こちら</a>。受賞の様子は<a href="https://youtu.be/kYeAbO96lII?t=11596" target="_blank">こちら</a>。プレゼン資料は<a href="https://www.slideshare.net/kosukeShinoda1/3d-230271758" target="_blank">こちら</a>。
     <li>2020.3.13（金）に開催される<a href="https://urbandata-challenge.jp/news/2019-3rd-symposium" target="_blank">アーバンデータチャレンジ2019 with IDC2019デモデー</a>において、「石造物3Dアーカイブ」と題してプロジェクトメンバーの篠田浩輔が発表しました。発表の様子は<a href="https://youtu.be/QFYrWyV3Jf4?t=1635" target="_blank">こちら</a>。
     <!-- <li>3月1日(日)に東京都埋蔵文化財センターで開催される<a href="https://adss07.peatix.com/" target="_blank">考古学・文化財のためのデータサイエンス・サロン #7</a>において、「Wikimedia Commonsを用いた石造物3Dデータの公開と共有」と題してプロジェクトメンバーの小池隆が発表します。-->
