--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   </p>
   <h3>マップ</h3>
   <div class="frame_wrapper">
-    <iframe src="https://stonework-3d-archive.github.io/map/index2.html"></iframe>
+    <iframe src="https://stonework-3d-archive.github.io/map/index.html?embed=1"></iframe>
   </div>
   <p>
     <a href="https://stonework-3d-archive.github.io/map/" target="_blank">別のウィンドウでマップを開く</a>
