--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
   </p>
   <h3>マップ</h3>
   <div class="frame_wrapper">
-    <iframe src="https://stonework-3d-archive.github.io/map/index.html?embed=1"></iframe>
+    <iframe src="https://stonework-3d-archive.github.io/map/index.html"></iframe>
   </div>
   <p>
-    <a href="https://stonework-3d-archive.github.io/map/" target="_blank">別のウィンドウでマップを開く</a>
+    <a href="https://stonework-3d-archive.github.io/map/index.html" target="_blank">別のウィンドウでマップを開く</a>
   </p>
   <hr width="50%"/>
   <h3>オープンデータ</h3>
