3Dモデルの件数表示

--- a/map/index.html
+++ b/map/index.html
@@ -41,7 +41,7 @@
             <h4 class="modal-title">このマップについて</h4>
           </div>
           <div class="modal-body">
-            <p>路傍や寺社にある庚申塔や道祖神などの石造物を3Dモデル化してアーカイブする、<a href="https://stonework-3d-archive.github.io/">石造物3Dアーカイブ</a>・プロジェクトの成果物を示したマップです。
+            <p>路傍や寺社にある庚申塔や道祖神などの石造物を3Dモデル化してアーカイブする、<a href="https://stonework-3d-archive.github.io/">石造物3Dアーカイブ</a>・プロジェクトの成果物を示したマップです。現在、<span id="model_count"></span>件の3Dモデルがあります。
             </p>
             <p>当サイトは以下のオープンソースソフトウェアを利用しています。
               <ul>
