Revert "マーカーアイコン変更"
This reverts commit 24d1eeb752b23dfe88905af184964f876e80bff7.

--- a/map/index.html
+++ b/map/index.html
@@ -55,7 +55,16 @@
                 <li><a href="https://fortawesome.github.io/Font-Awesome/" target="_blank">Font Awesome</a> (SIL OFL 1.1)
               </ul>
             </p>
-            <p><a href="https://github.com/code4history/Chokei/" target="_blank">石造文化財アイコン</a>: © 2022 T.N.K.Japan, Code for History, <a href="https://creativecommons.org/licenses/by-sa/4.0/deed.en" target="_blank">クリエイティブ・コモンズ・ライセンス（表示4.0 国際）</a>
+            <p xmlns:dct="http://purl.org/dc/terms/" xmlns:vcard="http://www.w3.org/2001/vcard-rdf/3.0#">
+              <a rel="license" href="http://creativecommons.org/publicdomain/zero/1.0/">
+                <img src="https://i.creativecommons.org/p/zero/1.0/88x31.png" style="border-style: none;" alt="CC0" />
+              </a>
+              <br />
+              To the extent possible under law,
+              <span rel="dct:publisher" resource="[_:publisher]">the person who associated CC0</span>
+              with this work has waived all copyright and related or neighboring rights to this work.
+              This work is published from:
+              <span property="vcard:Country" datatype="dct:ISO3166" content="JP" about="[_:publisher]">日本</span>.
             </p>
           </div>
           <div class="modal-footer">
